[package]
name = "decompiled_minecraft_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
ureq = "2.9.6"
